added all real data throughout the webpage

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prime World City - TrueView Realty | Luxury Apartments</title>
-    <meta name="description" content="Discover Prime World City by TrueView Realty - Premium apartments starting from ₹45 Lakh to ₹1.2 Cr with world-class amenities" />
+    <title>Pride World City - TrueView Realty | Luxury Apartments</title>
+    <meta name="description" content="Discover Pride World City by TrueView Realty - Premium apartments starting from ₹65 Lakh to ₹1.07 Cr with world-class amenities" />
     <meta name="author" content="TrueView Realty" />
 
-    <meta property="og:title" content="Prime World City - TrueView Realty | Luxury Apartments" />
-    <meta property="og:description" content="Discover Prime World City by TrueView Realty - Premium apartments starting from ₹45 Lakh to ₹1.2 Cr with world-class amenities" />
+    <meta property="og:title" content="Pride World City - TrueView Realty | Luxury Apartments" />
+    <meta property="og:description" content="Discover Pride World City by TrueView Realty - Premium apartments starting from ₹65 Lakh to ₹1.07 Cr with world-class amenities" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/favicon.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
